@@ -2,6 +2,7 @@ Revision history for Weather::Meteo
 
 0.06
 	Added bin/weather
+	weather() now supports the 'tz' argument
 
 0.05	Fri Apr 14 09:55:47 EDT 2023
 	Include the daily overview in the results
